; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_font.c_create_layout_with_dpi.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_font.c_create_layout_with_dpi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @create_layout_with_dpi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @create_layout_with_dpi(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @pango_cairo_create_context(i32* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 (...) @get_dpi_value()
  %9 = call i32 @pango_cairo_context_set_resolution(i32* %7, i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @pango_layout_new(i32* %10)
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @g_object_unref(i32* %12)
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @pango_cairo_create_context(i32*) #1

declare dso_local i32 @pango_cairo_context_set_resolution(i32*, i32) #1

declare dso_local i32 @get_dpi_value(...) #1

declare dso_local i32* @pango_layout_new(i32*) #1

declare dso_local i32 @g_object_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
